Add support for deny-list file extensions in search filters and UI
- Extend search logic to allow specifying denied file extensions alongside allowed ones
- Update FiltersDialog to manage both allow and deny extension lists with UI controls
- Persist allow/deny extension settings per user
- Adjust SearchView, SearchController, and SearchService to handle separate allow/deny extension lists
- Update validation and search initiation to support new extension filtering logic